* [Bug 864] Place ntpd service in maintenance mode if using SMF on Solaris
* [Bug 862] includefile nesting; preserve phonelist on reconfig.
* [Bug 604] ntpd regularly dies on linux/alpha.
* more leap second infrastructure fixes from Dave Mills.
* [Bug 858] recent leapfile changes broke non-OpenSSL builds.
* Use emalloc() instead of malloc() in refclock_datum.c (Calysto).
* Start using 'design by contract' assertions.
* [Bug 767] Fast sync to refclocks wanted.
* Allow null driftfile.
* Use YYERROR_VERBOSE for the new parser, and fix related BUILT_SOURCES.
* [Bug 629] changes to ensure broadcast works including on wildcard addresses
* [Bug 853] get_node() must return a pointer to maximally-aligned memory.
* Initial leap file fixes from Dave Mills.
* [Bug 858] Recent leapfile changes broke without OPENSSL.
* Use a char for DIR_SEP, not a string.
* [Bug 850] driftfile parsing changes.
* driftfile maintenance changes from Dave Mills.  Use clock_phi instead of
  stats_write_tolerance.
* [Bug 828] refid string not being parsed correctly.
* [Bug 846] Correct includefile parsing.
* [Bug 827] New parsing code does not handle "fudge" correctly.
* Enable debugging capability in the config parser.
* [Bug 839] Crypto password not read from ntp.conf.
* Have autogen produce writable output files.
* [Bug 825] Correct logconfig -/+ keyword processing.
* [Bug 828] Correct parsing of " delimited strings.
* Cleanup FILE * usage after fclose() in ntp_filegen.c.
* [Bug 843] Windows Completion port code was incorrectly merged from -stable.
* [Bug 841] make deferred binding to local interface the default.
	    (allows peers/servers to be configured even when no route exists)
* [Bug 840] do fudge configuration AFTER peers (thus refclocks) have been
	    configured.
* [Bug 824] Added new parser modules to the Windows project file.
* [Bug 832] Add libisc/log.c headers to the distribution.
* [Bug 808] Only write the drift file if we are in state 4.
* Initial import of libisc/log.c and friends.